<resources>
    <string name="app_name">Spot Me!</string>
    <string name="Login">Login</string>
    <string name="text_accounts">All Accounts</string>
    <string name="loginInput">Enter Name</string>
    <string name="passwordInput">Password</string>
    <string name="lifting">lifting</string>
    <string name="title_activity_gym_map">Map</string>
    <string name="google_maps_key">AIzaSyBB6MNFCkDtZxTMnn_7efHdLx3Erq56zsU</string>
    <string name="title_activity_gym_maps">Map</string>
    <string name="title_activity_user_profile">userProfile</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Username</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="title_activity_maps">Map</string>
</resources>
