<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.on.conestogac.www.spotme.Login">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Login"
        android:id="@+id/textView"
        android:textSize="35sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/loginInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/loginInput"
        android:focusable="true"
        android:textColorHighlight="#c6e2ff"
        android:textColorHint="#141a18"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/download"
        android:contentDescription="@string/lifting"/>
    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/loginInput"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/loginInput"
        android:textColorHint="#141a18"
        android:hint="@string/passwordInput"
        />
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/Login"
        android:layout_below="@id/passwordInput"
        android:layout_marginTop="50dp"
        android:layout_toStartOf="@+id/textView"
        />
    <TextView
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:padding="5dp"
        android:text="@string/newUser"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:onClick="onClickSignUp"
        android:layout_alignTop="@+id/loginButton"
        android:layout_alignEnd="@+id/imageView" />
    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/forgot"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:onClick="onClickForgot"
        android:layout_below="@+id/createAccount"
        android:layout_alignStart="@+id/createAccount" />
</RelativeLayout>
